# quality-rag

./: .gitignore  README.md  app.py  app_by_api.py  app_by_llm.py  main.py  pyproject.toml  ss.py
datas/md/: 工具-GraphicsMagick命令教程.md  工具-adb命令教程.md  工具-curl命令教程.md  工具-pandoc命令教程.md  工具-uv命令教程.md  工具-wget命令教程.md
deploy/: __init__.py  ai.py  config.py  spliter.py  utils.py  vector.py
utils/: __init__.py  document_vectorization.py  downloader_huggingface.py  downloader_modelscope.py  hug_downloader.py  modelscope_downloader_.py
