[project]
name = "rag-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.13",
    "huggingface-hub>=0.33.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "llama-index>=0.12.44",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-huggingface>=0.5.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-chroma>=0.4.2",
    "modelscope>=1.27.1",
    "torch>=2.7.1",
    "unstructured[md,pdf]>=0.18.3",
]
